[tool.poetry]
name = "edgar-tool"
version = "1.3.3"
description = "Search and retrieve corporate and financial data from the United States Securities and Exchange Commission (SEC)."
authors = ["Bellingcat"]
license = "GNU General Public License v3 (GPLv3)"
readme = "README.md"
repository = "https://github.com/bellingcat/EDGAR"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
]
keywords=["scraper", "edgar", "finance", "sec"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bellingcat/EDGAR/issues"

[tool.poetry.scripts]
edgar-tool = "edgar_tool.__main__:main"

[tool.poetry.dependencies]
fire = "^0.5"
jsonlines = "^4.0"
python = "^3.9"
requests = "^2.31"
tenacity = "^8.2"
xmltodict = "^0.13"
pytest = "^8.2.2"
click = "^8.1.7"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
black = "24.3.0"
isort = "5.13.2"
pre-commit = "^3.8.0"
pytest = "^8.2.2"
tox = "^4.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88 # Should always match tool.black

[tool.black]
line-length = 88  # black's default
